# cookiecutter-netbox-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: mkdocs.yml
docs/: extending.md  history.md  prompts.md  publishing.md  quickstart.md  search.md  testing.md  tutorial.md
extending/: index.html
history/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
prompts/: index.html
publishing/: index.html
pypi_release_checklist/: index.html
quickstart/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.hyphenated}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  mkdocs.yml  pyproject.toml  requirements_dev.txt
{{cookiecutter.hyphenated}}/.devcontainer/: dev.env.template  devcontainer.json  docker-compose.yml  post-create.sh
{{cookiecutter.hyphenated}}/.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
{{cookiecutter.hyphenated}}/.github/workflows/: ci.yaml  mkdocs.yaml  publish-pypi.yaml  publish-pypi.yml  test.yaml
{{cookiecutter.hyphenated}}/.hooks/: mkdocs-build.sh
{{cookiecutter.hyphenated}}/testing/: configuration.py
{{cookiecutter.hyphenated}}/tests/: __init__.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/: __init__.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  search.py  tables.py  urls.py  views.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/api/: __init__.py  serializers.py  urls.py  views.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/migrations/: __init__.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/templates/{{cookiecutter.underscored}}/: {{cookiecutter.__model_url}}.html
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/testing/: __init__.py  utils.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/tests/: __init__.py  test_api.py  test_graphql.py  test_models.py  test_views.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile-plugin_dev  devcontainer.json  docker-compose.override.yml
{{cookiecutter.project_slug}}/.devcontainer/configuration/: configuration.py  plugins.py
{{cookiecutter.project_slug}}/.devcontainer/initializers/: providers.yml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: config.yml  feature_request.yaml
{{cookiecutter.project_slug}}/.github/workflows/: publish-pypi.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  forms.py  models.py  navigation.py  tables.py  urls.py
