# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "cookiecutter-netbox-plugin"
version = "0.2.0"
authors = [
    {name = "Arthur Hanson", email = "ahanson@netboxlabs.com"},
]
description = "Cookiecutter template for a NetBox plugin"
readme = "README.md"

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">=3.10.0"

[project.optional-dependencies]
test = [
    "black==24.3.0",
    "check-manifest==0.49",
    "pre-commit==3.7.0",
    "pytest==8.1.1",
    "flake8",
    "flake8-pyproject",
    "pytest-github-actions-annotate-failures",
]

[project.urls]
Documentation = "https://https://github.com/netbox-community/cookiecutter-netbox-plugin/blob/main/README.md"
Source = "https://https://github.com/netbox-community/cookiecutter-netbox-plugin"
Tracker = "https://github.com/netbox-community/cookiecutter-netbox-plugin/issues"

[tool.black]
line-length = 120
target-version = ['py312']
