# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name =  "cookiecutter-netbox-plugin"
version = "0.2.0"
authors = [
    {name = "Arthur Hanson", email = "ahanson@netboxlabs.com"},
]
description = "Cookiecutter template for a NetBox plugin"
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["cookiecutter", "template", "netbox", "netbox-plugin"]

classifiers=[
    'Development Status :: 4 - Beta',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Code Generators',
    'Topic :: System :: Networking',
]

requires-python = ">=3.12.0"

[project.optional-dependencies]
test = [
    "check-manifest==0.51",
    "ruff==0.14.14",
    "pre-commit==6.0.0",
    "pytest==8.3.4",
    "pytest-github-actions-annotate-failures",
]
dev = [
    "cookiecutter>=2.1.0",
]

[project.urls]
Documentation = "https://github.com/netbox-community/cookiecutter-netbox-plugin/blob/main/README.md"
Source = "https://github.com/netbox-community/cookiecutter-netbox-plugin"
Tracker = "https://github.com/netbox-community/cookiecutter-netbox-plugin/issues"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff-format
]
